# OpENer

./: CMakeLists.txt  OpENerConfig.cmake.in
cmake/: add_opener_to_target.cmake  opener_user_conf.h.in
